[#34] AbstractCommand: convert ISO-8859 and others to UTF-8.